# CVRanker

./: LICENSE  README.md  app.py  main.py  pyproject.toml  streamlit_app.py
src/: extractor.py  parser.py  prompts.py  ranker.py  schemas.py  scorer.py
