[project]
name = "cvranker"
version = "1.0.0"
description = "AI-powered resume ranking system using LLMs, Pydantic and Streamlit."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "groq>=1.5.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pymupdf>=1.26.0",
    "streamlit>=1.46.0",
]
